# KanbanWithCline

./: README.md  main.py  pyproject.toml
doc/: DESIGN.md  FRONTEND-DELIVERY-PLAN.md  FRONTEND.md  PRODUCT-PRD.md  SKILL-FORMAT-PRD.md  agent-debate-harness-skeleton.md
src/kanbanwithcline/: __init__.py
static/: app.js  index.html  styles.css
