[project]
name = "kanbanwithcline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kalstein", email = "kalstein00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
